# plonky2-circom

./: Cargo.toml  README.md  e2e_test_recursive_proof_circom_verification.sh
benches/: hashing.rs
circom/: package.json
circom/circuits/: challenges.circom  constants.circom  fri.circom  gates.circom  goldilocks.circom  goldilocks_ext.circom  goldilocks_inverse.circom  plonk.circom  plonky2.circom  poseidon.circom  utils.circom
circom/e2e_tests/: e2e.circom  input.json  run.sh  run2.sh  witness_generation_test.sh
circom/e2e_tests/hardhat/: hardhat.config.ts  package.json
circom/e2e_tests/hardhat/contracts/: verifier.sol
circom/e2e_tests/hardhat/scripts/: deploy.ts
circom/e2e_tests/hardhat/test/: public.txt  verify.ts
circom/test/: challenges.test.js  fri.test.js  gates.test.js  goldilocks.test.js  goldilocks_ext.test.js  goldilocks_inverse.test.js  load_proof.js  plonk.test.js  poseidon.test.js
circom/test/circuits/: challenges.test.circom  checkzeta.test.circom  fri.test.circom  gates.test.circom  goldilocks.test.circom  goldilocks_ext.test.circom  goldilocks_inverse.test.circom  plonk.test.circom  poseidon.test.circom
circom/test/data/: conf.json  gates_test_inputs.json  proof.json  public_inputs.json  pwoi_challenges.json  pwoi_conf.json  pwoi_proof.json
src/: config.rs  lib.rs  template_constants.circom  template_gates.circom  verifier.rs
