[package]
name = "plonky2_circom_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
#plonky2 = { git = "https://github.com/polymerdao/plonky2", rev = "8c33c907" }
#plonky2_util = { git = "https://github.com/polymerdao/plonky2", rev = "8c33c907" }
plonky2 = { path = "../plonky2/plonky2" }
plonky2_util = { path = "../plonky2/util" }
anyhow = "1.0.65"
log = "0.4.17"
env_logger = "0.9.1"
base64 = "0.13.0"
serde = "1.0.145"
serde_json = "1.0.86"
keccak-hash = "0.10.0"
sha2 = "0.10.6"
itertools = "0.10.5"
#poseidon-rs = "0.0.8"
poseidon-rs = { path = "../poseidon-rs" }
num = { version = "0.4", features = [ "rand" ] }
ff = { package="ff_ce" , version="0.11", features = ["derive"] }

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 1
